# another

./: CMakeLists.txt
data/: config.lng  readme.txt
ext/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  memlist.cpp  memlist.h  sound.cpp  sound.h  unpack.c
